added favicon, fixed responsiveness in reportPage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="src\assets\images\q-wiki-logo.png">
     <title>Q-Wiki</title>
     <meta name="description" content="Q-Wiki is a knowledge-and-turn-based strategy game. Questions are automatically generated and kept up to date by querying Wikidata, the free and open knowledge base.">
   <body>
